# draw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanfile.py
draw/: CMakeLists.txt  bitmap.cpp  bitmap.h  color_map.cpp  color_map.h  color_map_settings.cpp  color_map_settings.h  cross.cpp  cross.h  cross_shape.cpp  cross_shape.h  depth_order.h  drag.h  draw_context.cpp  draw_context.h  draw_ellipse.h  draw_lines.h  draw_segments.cpp  draw_segments.h  draw_spline.cpp  draw_spline.h  edge.cpp  edge.h  edge_shape.cpp  edge_shape.h  ellipse.cpp  ellipse.h  ellipse_shape.cpp  ellipse_shape.h  error.h  font_look.cpp  font_look.h  gray.h  hue_generator.h  lines_shape.cpp  lines_shape.h  look.cpp  look.h  mono_image.h  node_settings.h  (+53 more)
draw/detail/: png_image.cpp  png_image.h  poly_shape_id.cpp  poly_shape_id.h  unique_id.h
draw/views/: affine_view.h  bitmap_canvas.cpp  bitmap_canvas.h  bitmap_view.cpp  bitmap_view.h  canvas.cpp  canvas.h  canvas_settings.cpp  canvas_settings.h  canvas_view.h  color_map_settings_view.h  cross_shape_view.cpp  cross_shape_view.h  cross_view.cpp  cross_view.h  defaults.h  ellipse_shape_view.cpp  ellipse_shape_view.h  ellipse_view.cpp  ellipse_view.h  font_look_view.cpp  font_look_view.h  keep_center.cpp  keep_center.h  lines_shape_view.cpp  lines_shape_view.h  list_view.h  look_view.cpp  look_view.h  node_settings_view.cpp  node_settings_view.h  order_view.cpp  order_view.h  pixel_canvas.cpp  pixel_canvas.h  pixel_view.cpp  pixel_view.h  pixel_view_settings.cpp  pixel_view_settings.h  point_view.h  (+24 more)
examples/: CMakeLists.txt  bitmap_demo.cpp  ellipse_demo.cpp  png_demo.cpp  poly_demo.cpp  polygon_demo.cpp  quad_demo.cpp  regular_polygon_demo.cpp  segments_demo.cpp  shapes_interface.h  waveform_demo.cpp
examples/common/: CMakeLists.txt  about_window.cpp  about_window.h  brain.h  display_error.cpp  display_error.h  observer.h  shape_demo_brain.h  user.cpp  user.h
test/: CMakeLists.txt  view_tests.cpp
